force-app/main/default/objects/Sharepoint_Folder_Name__mdt/Sharepoint_Folder_Name__mdt.object-meta.xml
<CustomObject>
    <label>Sharepoint Folder Name</label>
    <pluralLabel>Sharepoint Folder Names</pluralLabel>
</CustomObject>