force-app/main/default/objects/Sharepoint_Folder_Name__mdt/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>