force-app/main/default/objects/Sharepoint_Folder_Name__mdt/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <length>20</length>
    <type>Text</type>
</CustomField>