force-app/main/default/objects/Sharepoint_Folder_Name__mdt/fields/Sharepoint_Folder_Name__c.field-meta.xml
<CustomField>
    <fullName>Sharepoint_Folder_Name__c</fullName>
    <label>Sharepoint Folder Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>