force-app/main/default/objects/Sharepoint_Folder_Name__mdt/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <label>Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>